# XRSound-GUI_Linux

./: CHANGELOG.md  CMakeLists.txt  README.md  SimpleIni.h  XRSound GUI.docx  XRSound-GUI.pro  configeditor.cpp  configeditor.h  mainwindow.ui  res.qrc  src.pro
src/: configeditor.cpp  configeditor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  src.pro
